force-app/main/default/objects/NotificationLog__c/NotificationLog__c.object-meta.xml
<CustomObject>
    <label>Notification Log</label>
    <listViews>
        <fullName>RecentlyViewed</fullName>
        <columns>Rule__c</columns>
        <columns>Channel_Type__c</columns>
        <columns>Record_Id__c</columns>
        <columns>Recipient_User__c</columns>
        <columns>Status__c</columns>
        <columns>Sent_At__c</columns>
        <filterScope>RecentlyViewed</filterScope>
        <label>Recently Viewed</label>
    </listViews>
    <nameField>
        <displayFormat>NL-{000000}</displayFormat>
        <label>Notification Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>