force-app/main/default/objects/NotificationLog__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Channel</label>
    <referenceTo>NotificationChannel__c</referenceTo>
    <relationshipLabel>Notification Logs</relationshipLabel>
    <relationshipName>Notification_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>