force-app/main/default/objects/NotificationLog__c/fields/Cooldown_Key__c.field-meta.xml
<CustomField>
    <fullName>Cooldown_Key__c</fullName>
    <externalId>true</externalId>
    <label>Cooldown Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>