force-app/main/default/objects/NotificationLog__c/fields/Recipient_User__c.field-meta.xml
<CustomField>
    <fullName>Recipient_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Notification Logs</relationshipLabel>
    <relationshipName>Notification_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>