force-app/main/default/objects/NotificationLog__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rule</label>
    <referenceTo>NotificationRule__c</referenceTo>
    <relationshipLabel>Notification Logs</relationshipLabel>
    <relationshipName>Notification_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>