force-app/main/default/objects/NotificationLog__c/fields/Suppression_Reason__c.field-meta.xml
<CustomField>
    <fullName>Suppression_Reason__c</fullName>
    <label>Suppression Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cooldown</fullName>
            </value>
            <value>
                <fullName>FLS</fullName>
            </value>
            <value>
                <fullName>NoRecipients</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>