force-app/main/default/objects/NotificationLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Rule__c</columns>
    <columns>Channel__c</columns>
    <columns>Channel_Type__c</columns>
    <columns>Record_Id__c</columns>
    <columns>Recipient_User__c</columns>
    <columns>Status__c</columns>
    <columns>Sent_At__c</columns>
    <columns>Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>